fix tmux ctrl-n by run-shell in bash instead of sh

--- a/tmux.conf
+++ b/tmux.conf
@@ -90,7 +90,7 @@ bind-key s split-window -v -l 20 "tmux list-windows -a | fzy -l 100 | sed 's/: .
 
 # fuzzy select from names of modified files
 # NOTE: non_interactive_rc must have at least: _bash_functions, _my_hg, _autogit
-bind-key n run-shell "source ~/.non_interactive_rc; cd #{pane_current_path}; names | fzf-tmux -p 89%,90% --layout=default | tr -d '\n' | tmux loadb -b NAMES_BUF /dev/stdin"\; paste-buffer -d -b NAMES_BUF
+bind-key n run-shell "bash -c \"source ~/.non_interactive_rc; cd #{pane_current_path}; names | fzf-tmux -p 89%,90% --layout=default | tr -d '\n' | tmux loadb -b NAMES_BUF /dev/stdin\""\; paste-buffer -d -b NAMES_BUF
 
 ## Clipboard over xpra enabling ##
 # NOTE setenv -g DISPLAY :## required for this to work over an xpra connection
