fzf-window-selector, switch to run-shell and fzf-tmux instead of split-window to not disrupt zoomed panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -86,7 +86,7 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 # fzy select window from all sessions
 # NOTE overrides select-session but that one was not-needed prefix-w still shows all sessions
 # NOTE splits a new pane underneath so that this all works with vim etc already open,  when the supplied shell-command is finished the pane is discarded
-bind-key s split-window -v -l 20 "tmux list-windows -a | fzy -l 100 | sed 's/: .*//' | xargs tmux switch-client -t"
+bind-key s run-shell "source ~/BASH/_fzf_opts_and_tmux_settings; tmux list-windows -a | fzf-tmux \$FZF_TMUX_OPTS | sed 's/: .*//' | xargs tmux switch-client -t"
 
 # fuzzy select from names of modified files
 # NOTE: non_interactive_rc must have at least: _bash_functions, _my_hg, _autogit
