--- a/tmux.conf
+++ b/tmux.conf
@@ -73,10 +73,8 @@ bind-key C-v send-keys 'open_most_recent_qf' Escape KPEnter
 # shift-v use menu
 bind-key V send-keys 'choose_qf_from_list' Escape KPEnter
 
-# Send output (visible) of last command to tmux/xsel-clipboard
-bind-key C-t send-keys 'piperesulttotmux' Escape KPEnter
 # Note: overrides clock-mode
-bind-key t send-keys 'piperesulttotmux' Escape KPEnter
+bind-key t run-shell "bash -c \"bash ~/BASH/getfilelist.sh #{pane_current_path} | fzf-tmux -p 90%,90% --layout=default | tr -d '\n' | tmux loadb -b NAMES_BUF /dev/stdin\""\; paste-buffer -d -b NAMES_BUF
 
 # from nvim :checkhealth
 set-option -g focus-events on
@@ -86,11 +84,12 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 # fzy select window from all sessions
 # NOTE overrides select-session but that one was not-needed prefix-w still shows all sessions
 # NOTE splits a new pane underneath so that this all works with vim etc already open,  when the supplied shell-command is finished the pane is discarded
-bind-key s run-shell "source ~/BASH/_fzf_opts_and_tmux_settings; tmux list-windows -a | fzf-tmux \$FZF_TMUX_OPTS | sed 's/: .*//' | xargs tmux switch-client -t"
+# NOTE use . instead of source for compatability with dash instead of bash
+bind-key s run-shell ". ~/BASH/_fzf_opts_and_tmux_settings; tmux list-windows -a | fzf-tmux \$FZF_TMUX_OPTS | sed 's/: .*//' | xargs tmux switch-client -t"
 
 # fuzzy select from names of modified files
 # NOTE: non_interactive_rc must have at least: _bash_functions, _my_hg, _autogit
-bind-key n run-shell "bash -c \"source ~/.non_interactive_rc; cd #{pane_current_path}; names | fzf-tmux -p 89%,90% --layout=default | tr -d '\n' | tmux loadb -b NAMES_BUF /dev/stdin\""\; paste-buffer -d -b NAMES_BUF
+bind-key n run-shell "bash -c \"source ~/.non_interactive_rc; cd #{pane_current_path}; names | fzf-tmux -p 90%,90% --layout=default | tr -d '\n' | tmux loadb -b NAMES_BUF /dev/stdin\""\; paste-buffer -d -b NAMES_BUF
 
 ## Clipboard over xpra enabling ##
 # NOTE setenv -g DISPLAY :## required for this to work over an xpra connection
