small changes, copy cpp includes and using vim plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -83,7 +83,7 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # fzy select window from all sessions
 # NOTE overrides select-session but that one was not-needed prefix-w still shows all sessions
-# NOTE splits a new pane underneath so that this all works with vim etc already open,  when the supplied shell-command is finished the pane is discarded
+# NOTE uses fzf-tmux popup window to not disturb current zoom settings
 # NOTE use . instead of source for compatability with dash instead of bash
 bind-key s run-shell ". ~/BASH/_fzf_opts_and_tmux_settings; tmux list-windows -a | fzf-tmux \$FZF_TMUX_OPTS | sed 's/: .*//' | xargs tmux switch-client -t"
 
