Tmux and Vim plugin improvements
added:
tmux-fingers config
tmux extrackto config

fix tree-sitter object linewise selection

add vim plugins:
  lukas-reineke/indent-blankline.nvim
  tpope/vim-vinegar

fix vim tab-close behavior (moves left instead of right)

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,13 +52,28 @@ bind-key c command-prompt -p "new-window name: " "new-window -n '%%'"
 
 set-option -g history-limit 3000
 
-# use tmux-copycat plugin, shortcuts for regex searches and easy copy
-# https://github.com/tmux-plugins/tmux-copycat.git
-# - `prefix + ctrl-f` - simple *f*ile search
-# - `prefix + ctrl-g` - jumping over *g*it status files (best used after `git status` command)
-# - `prefix + alt-h` - jumping over SHA-1/SHA-256 hashes (best used after `git log` command)
-# `Enter` to copy highlighted match.
-run-shell ~/BASH/vim/plugins/tmux-copycat/copycat.tmux
+## PLUGINS ##
+
+# https://github.com/Morantron/tmux-fingers
+# `prefix + F` to enter [fingers] mode
+#         a-z: copies selected match to the clipboard
+# CTRL  + a-z: copies selected match to the clipboard and triggers @fingers-ctrl-action.  :open:
+# SHIFT + a-z: copies selected match to the clipboard and triggers @fingers-shift-action. :paste:
+# q, ESC or CTRL + c: exit [fingers] mode
+# NOTE configs must be set before loading tmux-fingers.tmux
+set -g @fingers-key f
+set -g @fingers-main-action 'ifne xsel -i --clipboard'
+run-shell ~/BASH/tmux_plugins/tmux-fingers/tmux-fingers.tmux
+
+# https://github.com/laktak/extrakto
+# `prefix + TAB` to enter [extracto] mode
+#  fuzzy complete from buffers, `ctrl-f` to change filter
+#  `TAB` to insert (paste)
+#  `ENTER` to copy
+run-shell ~/BASH/tmux_plugins/extrakto/extrakto.tmux
+# TODO set copy command
+# TODO set filter order, set -g @extrakto_filter_order
+# TODO create filter for shas
 
 # Search back to last prompt (mnemonic: "[b]ack"); searches for my special unicode prompt
 bind-key b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward " ❱ "
@@ -100,12 +115,11 @@ bind-key -T copy-mode-vi y     send-keys -X copy-pipe
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel
 
 # prevent tmux from trying to auto-set display,  when connecting over ssh this results in just having sessions "unset DISPLAY" https://www.babushk.in/posts/renew-environment-tmux.html
-# list is result of `tmux show-options -g update-enviornment` sans display
+# list is result of `tmux show-options -g update-enviornment` sans display, XAUTHORITY
 set-option -g update-environment \
 "KRB5CCNAME \
 SSH_ASKPASS \
 SSH_AUTH_SOCK \
 SSH_AGENT_PID \
 SSH_CONNECTION \
-WINDOWID \
-XAUTHORITY"
+WINDOWID"
