--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,10 @@ bind-key -r j select-pane -D
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
 
+# jump between zoomed in panes and stay zoomed
+# clashes with :display-pane
+bind-key -r q select-pane -t .+1 \;  resize-pane -Z
+
 # split panes using | and -
 bind-key | split-window -h -c "#{pane_current_path}"
 bind-key - split-window -v -c "#{pane_current_path}"
@@ -22,8 +26,6 @@ unbind %
 # Note: -T is key-table (like binding in normal/visual for vim), prefix table is acually defualt
 bind-key -r -T prefix       Left                 previous-window
 bind-key -r -T prefix       Right                next-window
-
-set -g default-terminal xterm-256color
 
 ### from http://preaction.me/tmux/talk/slides.html ###
 # decrese time it waits after escape key
@@ -62,7 +64,7 @@ set-option -g history-limit 3000
 # q, ESC or CTRL + c: exit [fingers] mode
 # NOTE configs must be set before loading tmux-fingers.tmux
 set -g @fingers-key f
-set -g @fingers-main-action 'ifne xsel -i --clipboard'
+set -g @fingers-main-action 'ifne wl-copy'
 run-shell ~/BASH/tmux_plugins/tmux-fingers/tmux-fingers.tmux
 
 # https://github.com/laktak/extrakto
@@ -75,6 +77,7 @@ run-shell ~/BASH/tmux_plugins/extrakto/extrakto.tmux
 # TODO set filter order, set -g @extrakto_filter_order
 # TODO create filter for shas
 
+# note: not repeatable because command ends in copy mode, use -n to repeat
 # Search back to last prompt (mnemonic: "[b]ack"); searches for my special unicode prompt
 bind-key b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward " ❱ "
 
@@ -93,7 +96,7 @@ bind-key t run-shell "bash -c \"bash ~/BASH/getfilelist.sh #{pane_current_path} 
 
 # from nvim :checkhealth
 set-option -g focus-events on
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # fzy select window from all sessions
@@ -106,15 +109,15 @@ bind-key s run-shell ". ~/BASH/_fzf_opts_and_tmux_settings; tmux list-windows -a
 # NOTE: non_interactive_rc must have at least: _bash_functions, _my_hg, _autogit
 bind-key n run-shell "bash -c \"source ~/.non_interactive_rc; cd #{pane_current_path}; names | fzf-tmux -p 90%,90% --layout=default | tr -d '\n' | tmux loadb -b NAMES_BUF /dev/stdin\""\; paste-buffer -d -b NAMES_BUF
 
-## Clipboard over xpra enabling ##
-# NOTE setenv -g DISPLAY :## required for this to work over an xpra connection
-set -s copy-command 'ifne xsel -i --clipboard'
+## Clipboard over wl-copy enabling ##
+# NOTE setenv -g WAYLAND_DISPLAY :## required for this to work over an wrps connection
+set -s copy-command 'ifne wl-copy'
 set -s set-clipboard off
 
 bind-key -T copy-mode-vi y     send-keys -X copy-pipe
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel
 
-# prevent tmux from trying to auto-set display,  when connecting over ssh this results in just having sessions "unset DISPLAY" https://www.babushk.in/posts/renew-environment-tmux.html
+# prevent tmux from trying to auto-set display,  when connecting over ssh this results in just having sessions "unset WAYLAND_DISPLAY" https://www.babushk.in/posts/renew-environment-tmux.html
 # list is result of `tmux show-options -g update-enviornment` sans display, XAUTHORITY
 set-option -g update-environment \
 "KRB5CCNAME \
@@ -123,3 +126,13 @@ SSH_AUTH_SOCK \
 SSH_AGENT_PID \
 SSH_CONNECTION \
 WINDOWID"
+
+# i dont want to repeat, it just makes me have to pause on the keyboard, and i dont have stacks of panes to move through, fzf for long list, n for next in search shortcuts
+# no repeat, instant type after move pane!
+set-option -g repeat-time 0
+
+
+#### source more configs #####
+
+# agent context passing shortuct keys
+source-file ~/BASH/tmux_agent_bindings.conf 
