[in progress] clipboard send script for tee to wl-copy + ssh-file-mount and watch-loop script for remote

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,7 +64,8 @@ set-option -g history-limit 3000
 # q, ESC or CTRL + c: exit [fingers] mode
 # NOTE configs must be set before loading tmux-fingers.tmux
 set -g @fingers-key f
-set -g @fingers-main-action 'ifne wl-copy'
+# TODO this is not working
+set -g @fingers-main-action 'ifne ~/BASH/clipboard_send_proxy.sh'
 run-shell ~/BASH/tmux_plugins/tmux-fingers/tmux-fingers.tmux
 
 # https://github.com/laktak/extrakto
@@ -111,7 +112,7 @@ bind-key n run-shell "bash -c \"source ~/.non_interactive_rc; cd #{pane_current_
 
 ## Clipboard over wl-copy enabling ##
 # NOTE setenv -g WAYLAND_DISPLAY :## required for this to work over an wrps connection
-set -s copy-command 'ifne wl-copy'
+set -s copy-command 'ifne ~/BASH/clipboard_send_proxy.sh'
 set -s set-clipboard off
 
 bind-key -T copy-mode-vi y     send-keys -X copy-pipe
